--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Download AutoHotkey Portable
+        shell: pwsh
         run: |
           Write-Host "Downloading AutoHotkey v1.1 Portable..."
           Invoke-WebRequest -Uri "https://www.autohotkey.com/download/1.1/AutoHotkey_1.1.34.03.zip" -OutFile "AutoHotkey.zip"
@@ -22,9 +23,10 @@ jobs:
           Write-Host "AutoHotkey Portable extracted successfully"
 
       - name: Compile AHK to EXE
+        shell: pwsh
         run: |
           Write-Host "Starting compilation..."
-          & "AutoHotkey\Compiler\Ahk2Exe.exe" /in "main.ahk" /out "hypetype.exe" /icon "assets\icon.ico" /base "AutoHotkey\AutoHotkeyU32.exe"
+          & ".\AutoHotkey\Compiler\Ahk2Exe.exe" /in "main.ahk" /out "hypetype.exe" /icon "assets\icon.ico" /base ".\AutoHotkey\AutoHotkeyU32.exe"
           Write-Host "Compilation completed"
 
       - name: Upload Build Artifact
