--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,16 +17,17 @@ jobs:
       - name: Download AutoHotkey Portable
         shell: pwsh
         run: |
-          Write-Host "Downloading AutoHotkey v1.1 Portable..."
+          Write-Host "Downloading AutoHotkey v2.0 Portable..."
           Invoke-WebRequest -Uri "https://github.com/AutoHotkey/AutoHotkey/releases/download/v2.0.18/AutoHotkey_2.0.18.zip" -OutFile "AutoHotkey.zip"
           Expand-Archive -Path "AutoHotkey.zip" -DestinationPath "AutoHotkey"
+          Get-ChildItem -Path "AutoHotkey" -Recurse
           Write-Host "AutoHotkey Portable extracted successfully"
 
       - name: Compile AHK to EXE
         shell: pwsh
         run: |
           Write-Host "Starting compilation..."
-          & ".\AutoHotkey\Compiler\Ahk2Exe.exe" /in "main.ahk" /out "hypetype.exe" /icon "assets\icon.ico" /base ".\AutoHotkey\AutoHotkeyU32.exe"
+          & ".\AutoHotkey\v2\Compiler\Ahk2Exe.exe" /in "main.ahk" /out "hypetype.exe" /icon "assets\icon.ico" /base ".\AutoHotkey\v2\AutoHotkey64.exe"
           Write-Host "Compilation completed"
 
       - name: Upload Build Artifact
