--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,17 +28,13 @@ jobs:
           Write-Host "Starting compilation..."
           Write-Host "Current directory:"
           Get-Location
-          & ".\AutoHotkey\Compiler\Ahk2Exe.exe" /in "main.ahk" /out "hypetype.exe" /icon "assets\icon.ico" /base ".\AutoHotkey\AutoHotkeyU32.exe"
+          & ".\AutoHotkey\Compiler\Ahk2Exe.exe" /in "scr\main.ahk" /out "hypetype.exe" /icon "assets\icon.ico" /base ".\AutoHotkey\AutoHotkeyU32.exe"
           Write-Host "Compilation completed"
           Write-Host "Files in current directory:"
           Get-ChildItem -Recurse
-          Write-Host "Looking for hypetype.exe..."
-          Get-ChildItem -Path . -Filter hypetype.exe -Recurse
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: hypetype
-          path: |
-            **\hypetype.exe
-            hypetype.exe
+          path: hypetype.exe
