--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,11 +35,6 @@ jobs:
           }
 
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./scr/hypetype.exe
-          asset_name: hypetype.exe
-          asset_content_type: application/octet-stream
+          files: ./scr/hypetype.exe
